# ghostty-config-files

./: .env.example  .envrc.local.example  .github-mcp-status.json  .gitignore  .mcp.json.backup  .mcp.json.example  .shellcheckrc  AGENTS.md  ARCHITECTURE.md  BOX_RENDERING_IMPROVEMENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup  COMPLETE-SETTINGS-SYNC-SETUP.md  COMPLETE-SETUP-GUIDE.md  COMPLETE_REFACTORING_ROADMAP.md  COMPLIANCE_REVIEW_20251109.md  COMPLIANCE_SUMMARY_VISUAL.md  CONSTITUTIONAL_FIX_VALIDATION_REPORT.md  CONTEXT7_SETUP.md  CROSS-REPO-SYNC-GUIDE.md  DAILY_UPDATES_ENHANCEMENT_SUMMARY.md  ENHANCED-SYNC-GUIDE.md  ERROR_RESOLUTION_SUCCESS_REPORT.md  FINAL-SYNC-SOLUTION.md  GEMINI.md  GHOSTTY-ALWAYS-OPTION.md  GITHUB_DEPLOYMENT_VERIFICATION_REPORT.md  GITHUB_MCP_SETUP.md  GITHUB_MCP_VERIFICATION.md  HANDOFF_SUMMARY.md  LICENSE  LLM_HANDOFF_INSTRUCTIONS.md  PHASE_2_PARALLEL_EXECUTION_PLAN.md  PRIVACY-GUIDE.md  QUICK_START_FOR_LLM.md  README-SESSIONS.md  README.enhanced.md  README.md  RESTRUCTURING_PLAN.md  (+78 more)
.agent-os/: README.md
.claude/: README.md  settings.local.json.backup-20251111-203121
.gemini/: settings.json
.github/: CONTRIBUTING.md
.runners-local/: README.md
.screenshot-tools/: pyproject.toml
.specify/: README-SPEC-VALIDATION.md
000-check/: check_ghostty.sh  check_nodejs.sh
001-uninstall/: uninstall_ghostty.sh  uninstall_nerdfonts.sh
002-install-first-time/: install_deps_feh.sh  install_deps_nerdfonts.sh  install_deps_nodejs.sh
003-verify/: verify_deps_ghostty.sh  verify_deps_nerdfonts.sh  verify_deps_nodejs.sh
004-reinstall/: install_feh.sh  install_ghostty.sh
005-confirm/: confirm_ghostty.sh  confirm_nerdfonts.sh
_old_references/scripts/examples/python/: pyproject.toml
astro-website/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
delete/: 01-QUICK-REFERENCE-keep-visible.md  02-verify-prerequisites.sh  AUDIT-SUMMARY.md  SIMPLE-STEPS.md
docs/: 404.html  CLAUDE.md  GEMINI.md  README.md  TROUBLESHOOTING_AUTOCOMPLETION.md  VERIFICATION_REPORT_AUTOCOMPLETION.md  _config.yml  data-store.json  demo.gif.bak  index.html  index.md  installation.md  online-resource.md  screenshots.md  settings.json  sitemap-0.xml  sitemap-index.xml  sw.js
docs-setup/: new-device-setup.md  zsh-security-check.md
docs-site/: astro.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.mjs  tsconfig.json
docs-site/src/layouts/: BaseLayout.astro
docs-site/src/pages/: index.astro
docs-site/src/pages/installation/: index.astro
docs-site/src/pages/performance/: index.astro
docs-site/src/pages/screenshots/: index.astro
docs-site/src/styles/: global.css
documentations/: FILE_ORGANIZATION_ANALYSIS.md  PROPOSED_IMPROVEMENTS.md  index.html  installation.md  screenshots.md  sitemap-index.xml
lib/: init.sh
local-infra/: README.md
logs/: .gitignore
scripts/: dev.fish  (+60 more)
scripts/config/: configure_zsh.sh  fix-zsh-compinit-security.sh  pyproject.toml
(+1562 files in other folders)
