[project]
name = "ghostty-screenshot-tools"
version = "1.0.0"
description = "SVG screenshot capture tools for Ghostty installation documentation"
requires-python = ">=3.9"
dependencies = [
    "termtosvg>=1.1.0",
    "asciinema>=2.4.0",
    "svg-term>=1.0.0",
    "jinja2>=3.1.0",
    "pillow>=10.0.0",
    "cairosvg>=2.7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
